# customer-service-monitoring

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .gitmodules  .prospector.yaml  .pylintrc  .travis.yml  .yamllint  .zuul.yaml  CONTRIBUTING.md  LICENSE  README.md  ansible.cfg  apache.yml  clouds.yml  hosts  install_packer.sh  install_terraform.sh  library  prepare_cloud_config.sh  py-requirements.txt  pyproject.toml  requirements.txt  requirements.yaml  requirements.yml  test-requirements.txt  tox.ini
images/: build_image.sh
inventory/: base_infra.yml
playbooks/: ansible_update.yml  apache.yml  as_monitoring_destroy.yaml  as_monitoring_destroy.yml  as_monitoring_setup.yaml  as_monitoring_setup.yml  bastion.yaml  bastion_destroy.yaml  bastion_setup.yaml  build_infra.yaml  check-ssh.yml  check_ssh_between_vpcs.yml  checking.yml  cleaning.yml  collectd_setup.yaml  consul_server_setup.yml  csm_monitoring_eu_de.yaml  csm_monitoring_eu_nl.yaml  destroy_extended.yaml  destroy_infra.yaml  destroy_scenarios_controller.yml  dns_monitoring_destroy.yaml  dns_monitoring_destroy.yml  dns_monitoring_setup.yaml  dns_monitoring_setup.yml  dummy.yaml  ecs_node.yaml  hdd_monitoring_destroy.yaml  hdd_monitoring_destroy.yml  hdd_monitoring_setup.yaml  hdd_monitoring_setup.yml  hello_world.yml  install_telegraf_client.yml  iscsi_monitoring_destroy.yaml  iscsi_monitoring_destroy.yml  iscsi_monitoring_setup.yaml  iscsi_monitoring_setup.yml  lb_down_monitoring_destroy.yaml  lb_down_monitoring_destroy.yml  lb_down_monitoring_setup.yaml  (+69 more)
roles/: telegraf-client
scenarios/: build.sh  test.sh  (+4 more)
(+562 files in other folders)
