[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for OTC customer service monitoring"
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.8"
ansible-lint = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
