[tool.poetry]
name = "csm-sandbox"
version = "0.1.0"
description = "Sandbox for OTC customer service monitoring"
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"

ansible = "^2.8"
ansible-lint = "^4.1"
jinja2 = "^2.10"
openstacksdk = "^0.31.2"
otcextensions = "^0.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
